--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
       </select>
       <button id="create-player">Create Player</button>
     </div>
-    
-    
-    <br><br>
     <button id="explore">Explore</button>
     <p id="new-stats"></p>
   </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.6/zepto.js"></script>
+    <script type="text/javascript" src="everything.js"></script>
     <script type="text/javascript" src="player.js"></script>
   </body>
 </html>
